[tool.poetry]
name = "fastapi-plan"
version = "0.3.1"
description = "Dead simple template manager for FastAPI applications"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rafsaf/fastapi-template"
authors = ["rafsaf <rafal.safin12@gmail.com>"]
keywords = ["Python", "FastAPI",]
include = [
    "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"

[tool.poetry.scripts]
fastapi-plan = "fastapi_plan:main"

[tool.poetry.dev-dependencies]
fastapi = "^0.63.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.17.2"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^7.0.0"
pydantic = {extras = ["email"], version = "^1.8.1"}
uvicorn = "^0.13.4"
aerich = "^0.5.3"
python-dotenv = "^0.17.1"
python-multipart = "^0.0.5"
requests = "^2.25.1"

pytest = "^6.0"
black = "^21.5b0"
flake8 = "^3.9.1"
asynctest = "^0.13.0"

pytest-cookies = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = 1
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::cryptography.utils.CryptographyDeprecationWarning",
]